--- a/index.html
+++ b/index.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css">
     <title>ROCK_PAPER_SCISSORS</title>
 </head>
-<body>
+<body><div class="x">
+    <div class="header">
+        <h1>Rock Paper Scissors</h1>
+    </div>
+    <div class="body_part">
+        <h2>Choose Rock,Paper or Scissors</h2>
+        <h3>First to get 5 points wins.</h3>
+        <div class="scores">
+            <h3 class="uline">Scores</h3>
+            <div class="p1">
+                <p class="pp">Player:</p>
+                <p class="pp">Computer:</p>
+            </div>
+        </div>
+        <div class="last-part">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTR7u0G8OBgfTIrKWmIfLfqw9AMwKsOBjTChphtpWNayg4DIMEu9equWneExLgmceC1byE&usqp=CAU">
+            <img src="https://www.pngitem.com/pimgs/m/266-2667252_transparent-rock-paper-scissors-clipart-rock-paper-scissors.png">
+            <img class="lastimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRixvk0E83qnueF3rYE45kn_5-ng6SXONW7lnPJqGH-W9uPoxj7w4sTPnY2a8xy4-304Q&usqp=CAU">
+        </div>
+    </div></div>
+    <div class="footer">
+        Thanks for visiting my website.
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
