--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     </div>
     <div class="body_part">
         <h2>Choose Rock,Paper or Scissors</h2>
-        <h3>First to get 5 points wins.</h3>
+        <h3 class="toph">First to get 5 points wins.</h3>
         <div class="scores">
             <h3 class="uline">Scores</h3>
             <div class="p1">
-                <p class="pp">Player:</p>
-                <p class="pp">Computer:</p>
+                <p class="pp">Player:<div class="ps"></div></p>
+                <p class="pp">Computer:<div class="cs"></div></p>
             </div>
         </div>
         <div class="last-part">
