--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="last-part">
-            <img data-key="rock" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTR7u0G8OBgfTIrKWmIfLfqw9AMwKsOBjTChphtpWNayg4DIMEu9equWneExLgmceC1byE&usqp=CAU">
+            <img data-key="rock" src="https://www.seekpng.com/png/small/816-8161371_rock-paper-scissor-icon-png.png">
             <img data-key="paper" src="https://www.pngitem.com/pimgs/m/266-2667252_transparent-rock-paper-scissors-clipart-rock-paper-scissors.png">
             <img data-key="scissors" class="lastimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRixvk0E83qnueF3rYE45kn_5-ng6SXONW7lnPJqGH-W9uPoxj7w4sTPnY2a8xy4-304Q&usqp=CAU">
         </div>
